Revision history for MIDI-Bassline-Walk

{{$NEXT}}

0.0601 2023-11-11 19:36:32
    - Clean-up things!

0.0600 2023-11-11 09:07:48
    - Enable the positions attribute, to specify allowed scale degrees.

0.0512 2023-11-10 13:51:54
    - No. Tonic means play the first scale note!

0.0511 2023-11-10 13:40:53
    - Play the IV note for 7-note scales, instead of the iii.

0.0510 2023-11-10 09:04:37
    - Do not trample the existing key!

0.0509 2023-11-10 08:49:24
    - Allow single note tonic computation.

0.0508 2023-02-04 15:09:07
    - No! Fix the chord *before* parsing.

0.0507 2023-02-04 14:46:18
    - Do not allow uninterpretable X/Y type chords.

0.0506 2022-12-10 12:18:49
    - Add the wrap attribute.
    - Improve tests.
    - Improve documentation.

0.0505 2022-10-23 08:07:32
    - Avoid implicit imports.

0.0504 2022-08-08 05:58:25
    - Fix tone-pruning flavor logic.

0.0503 2022-07-06 10:39:45
    - Improve documentation.

0.0502 2022-07-06 05:34:15
    - Specify minimum version for L::U.

0.0501 2022-07-04 15:40:56
    - Improve documentation a bit.

0.0500 2022-07-03 19:52:17
    - Build the default scale subroutine for either major/minor or modal.
    - Use the List::SomeUtils module.
    - Allow the tonic attribute to apply to any Western 7-note scale.
    - Fix-up eg/solitude a bit.

0.0404 2022-07-03 08:14:01
    - Fix variable naming in eg/.
    - Improve documentation slightly.

0.0403 2022-07-03 06:47:37
    - Drop "flavor-clashing" scale notes for *any* scale.

0.0402 2022-07-02 10:25:06
    - Improve tests slightly.
    - Add the eg/solitude program.

0.0401 2022-07-02 00:11:29
    - Optionally toggle inclusion of non-scale chord notes in the choices.
    - Make sure the _closest() function has arguments.
    - Modularize boolean isa code.
    - Improve documentation slightly.
    - Improve tests.

0.0400 2022-07-01 12:08:47
    - Enable modal accompaniment, instead of playing non-key, sour notes.
    - Improve documentation.
